[package]
name = "mempaw"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = {version = "4.0", features = ["serde", "borsh"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
home = "0.5"
serde_json = "1.0"
borsh = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
